corner_stone_infra_project/rds.tf
resource "aws_db_instance" "cornerstone_db" {
  identifier              = var.db_identifier
  allocated_storage       = var.db_allocated_storage
  storage_type            = "gp2"
  engine                  = "postgres"
  engine_version          = var.db_engine_version
  instance_class          = var.db_instance_class
  db_name                 = var.db_name
  username                = var.db_username
  password                = var.db_password
  parameter_group_name    = "default.postgres13"
  multi_az                = true
  publicly_accessible     = false
  backup_retention_period = 7
  vpc_security_group_ids  = [aws_security_group.sg.id]
  db_subnet_group_name    = aws_db_subnet_group.main.name
  port                    = 5432
  skip_final_snapshot     = true

  tags = {
    Name        = "cornerstone-dev-rds-postgres"
    project     = "cornerstone"
    environment = "dev"
    managed_by  = "terraform"
  }
}

resource "aws_db_subnet_group" "main" {
  name       = "main"
  subnet_ids = module.vpc.private_subnets
  tags = {
    Name = "main"
  }
}
